# rustirc

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
bot/: Cargo.toml
bot/src/: example_handler.rs  main.rs  names.rs  ping.rs  reply.rs  rumors.rs  schema.sql  score.rs  seen.rs  welcome.rs
bot/src/botty/: mod.rs
irc_core/: Cargo.toml
irc_core/src/: bot.rs  client.rs  handler.rs  irc_msg.rs  lib.rs
src/: irc_msg.rs  lib.rs
