[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = "0.4.42"
chrono-humanize = "0.2.3"
clap = { version = "4.5.51", features = ["derive"] }
irc_core = { version = "0.1.0", path = "../irc_core" }
tokio = { version = "1.48.0", features = ["full"] }
